# MietStoerungsProtokoll

./: .gitignore  README.md  kernfunktionenCheckliste.txt  protokoll.py  pyproject.toml  requirements.txt  struktur.txt
app/: main.py  main_backup.py
app/widgets/: draggable_card.py
core/services/: data_processing.py  pdf_generation.py  protokol_service.py  statistics_service.py
database/: protokoll.db
infrastructure/database/: __init__.py  database_setup.py  protokoll.db
legacy/: config.json
legacy/app/: main.py  main_backup.py
legacy/app/kv/: protokoll.kv
legacy/core/services/: pdf_generation.py  protokol_service.py
legacy/scripts/: update_backup.py
src/mietstoerungsprotokoll/domain/: models.py
tests/: test_protokoll.py
